index.css
body {
    background: url(images/C5505DA3-55E5-4751-BEA5-D72ABF38ED8E.jpeg);
    background-size: cover;
    font-family: 'Archivo Narrow', sans-serif;
}

.logo {
    width: 100px;
}

.images img {
    width: 300px;
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 30px;
}

.buy-here {
    border: 2px solid #F36D57;
    text-decoration: none;
    padding: 10px;
    border-radius: 50%;
    color: black;
    margin: 30px;
}

.text {
    margin-bottom: 30px;
}

p {
    margin-top: 30px;
    text-align: center;
    margin-bottom: 30px;
}

.links a {
    text-decoration: none;
    color: black;
    margin: 25px;
}


@media (min-width: 1000px) {
    body {
        background: linear-gradient(0deg, rgba(229, 229, 229, 0.7), rgba(229, 229, 229, 0.7)), url(images/D16F040E-8287-489B-9B95-8AF8194CD140.jpeg);
        background-size: cover;
        background-position: center;
        margin: 0;
    }

.logo {
    width: 200px;
    margin-bottom: 50px;
    margin-top: 50px;
}

.images img {
    width: 300px;
    display: flex;
    flex-direction: column;
    margin-left: 300px;
    margin-top: 35px;
}

.content {
    display: flex;
    flex-direction: row;
    margin-left: 150px;
}

.text {
    margin-left: 20px;
    margin-bottom: 50px;
    font-size: 1.5rem;
}

.buy-here {
    margin-left: 100px;
    margin-top: 20px;
    border: 3px solid #F36D57;
    text-decoration: none;
    color: black;
    padding: 30px;
    border-radius: 50%;
    cursor: pointer;
    font-size: 1.2rem;
    background: #F26D57;
}

p {
    margin-left: 25px;
    margin-top: 80px;
    font-size: 1.5rem;
    text-align: left;
}

.links a {
    text-decoration: none;
    color: black;
    cursor: pointer;
    margin-left: 400px;
}

footer {
    background: #F26D57;
    padding-bottom: 20px;
}

.f-one {
    text-align: center;
}

h2 {
    font-size: 2.25rem;
    margin-left: 30px;
}

li {
    font-size: 1.75rem;
}

.use-point {
    font-size: 1.90rem;
}
.copyright {
    color: #fff;
    font-size: 0.75rem;
}

.info-three {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
}

